align checkbox on login form correctly (#66)

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -672,3 +672,9 @@ body {
     }
   }
 }
+
+form.new_user {
+  input[type=checkbox] {
+    margin-left: 0;
+  }
+}
